--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.153 2008/08/13 00:25:36 rlk Exp $
+## $Id: Makefile.am,v 1.154 2008/10/06 12:38:07 rlk Exp $
 ## Copyright (C) 2000-2004 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -30,6 +30,7 @@ include $(top_srcdir)/scripts/global.mk
 SUBDIRS = include src samples test po man doc scripts
 DISTDIRS = m4 m4extra
 
+docdir = $(datadir)/$(PACKAGE)/doc
 
 ## Rules
 
@@ -37,6 +38,17 @@ DISTDIRS = m4 m4extra
 libtool: $(LIBTOOL_DEPS)
 	cd $(srcdir); \
 	$(SHELL) ./config.status --recheck
+
+# Don't list ChangeLog as a dependency here because it forces network
+# access, and because it usually runs as superuser rather than the user
+# who normally builds Gutenprint.
+install-data-local: NEWS AUTHORS COPYING README
+	$(mkdir_p) $(DESTDIR)$(docdir)
+	$(INSTALL_DATA) $(srcdir)/NEWS $(DESTDIR)$(docdir)
+	$(INSTALL_DATA) $(srcdir)/ChangeLog $(DESTDIR)$(docdir)
+	$(INSTALL_DATA) $(srcdir)/AUTHORS $(DESTDIR)$(docdir)
+	$(INSTALL_DATA) $(srcdir)/COPYING $(DESTDIR)$(docdir)
+	$(INSTALL_DATA) $(srcdir)/README $(DESTDIR)$(docdir)
 
 # This rather strange-looking code ensures that the change log is only
 # rebuilt if any of the CVS/Entries files have changed since the change log
