1) Preliminary support for the following printers.  These printers       may be retuned for improved quality or performance in future       releases.
      Epson inkjet printers:

	Epson PictureMate 215
	Epson PX 101
	Epson PX 201
	Epson PX 601F
	Epson Stylus CX9300F
	Epson Stylus CX9400F
	Epson Stylus CX9475F
	Epson Stylus DX9400F
	Epson Stylus NX200
	Epson Stylus NX400
	Epson Stylus Photo R290
	Epson Stylus Photo RX610
	Epson Stylus Photo RX690
	Epson Stylus Office B30
	Epson Stylus Office B33
	Epson Stylus Office B40W
	Epson Stylus Office T30
	Epson Stylus Office T33
	Epson Stylus Office T40W
	Epson Stylus Office BX300F
	Epson Stylus Office BX600FW
	Epson Stylus Office SX600FW
	Epson Stylus Office TX300F
	Epson Stylus Office TX600FW
	Epson Stylus SX200
	Epson Stylus SX205
	Epson Stylus SX400
	Epson Stylus SX405
	Epson Stylus TX200
	Epson Stylus TX400
	Epson ME Office 70
	Epson ME Office 80W
	Epson ME Office 700FW
	Epson WorkForce 30
	Epson WorkForce 40
	Epson WorkForce 500
	Epson WorkForce 600

   2) Experimental support for the following printers.  These printers
      may not function correctly, and may be retuned for improved
      quality or performance in future releases.

      Epson inkjet printers:

	Epson Artisan 700
	Epson Artisan 800
	Epson Stylus NX100
	Epson Stylus NX300
	Epson Stylus PX700FW
	Epson Stylus PX800FW
	Epson Stylus S20
	Epson Stylus SX100
	Epson Stylus SX105
	Epson Stylus T20
	Epson Stylus TX100
	Epson Stylus Photo TX700W
	Epson Stylus Photo TX800W

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -185,10 +185,11 @@ if ($missing_drivers) {
 }
 
 if ($opt_x) {
-    for (sort @printer_list) {
-	if (defined $printer_name{$_}) {
-	    printf("%s	%s	%s\n", $printer_name{$_}, $_, $foomap{$_});
-	}
+    my (%printer_long_name) = reverse %printer_name;
+    for (sort keys %printer_long_name) {
+	my ($pn) = $printer_long_name{$_};
+	next if $printer_family{$pn} eq "ps" || $printer_family{$pn} eq "raw";
+	printf("%s	%s	%s\n", $_, $pn, $foomap{$pn});
     }
     exit;
 }
