Make duplex and print to CD work on Artisan printers

--- a/src/xml/escp2/inputslots/Makefile.am
+++ b/src/xml/escp2/inputslots/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.3 2008/10/24 00:37:14 rleigh Exp $
+## $Id: Makefile.am,v 1.4 2008/12/09 02:33:58 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -26,6 +26,7 @@ include $(top_srcdir)/scripts/global.mk
 pkgxmldatadir = $(pkgdatadir)/@GUTENPRINT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSION@/xml/escp2/inputslots
 
 pkgxmldata_DATA =				\
+	artisan.xml				\
 	b500.xml				\
 	cd_cutter_roll_feed.xml			\
 	cd_roll_feed.xml			\
