--- a/src/cups/test-rastertogutenprint.in
+++ b/src/cups/test-rastertogutenprint.in
@@ -84,6 +84,10 @@ cleanup() {
 
 pdftops="`type -p pdftops`"
 
+if [ ! -n "$pdftops" -o ! -x "$pdftops" ] ; then
+    pdftops="`whence pdftops`"
+fi
+
 if [ -n "$pdftops" -a ! -x "$cupsdir/cgpdftoraster" ] ; then
     tfile=`mktemp`
     trap cleanup 1 2 3 6 14 15 30
