Fix Epson NX100 and related printers

--- a/src/xml/escp2/media/Makefile.am
+++ b/src/xml/escp2/media/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.9 2008/10/24 00:37:14 rleigh Exp $
+## $Id: Makefile.am,v 1.10 2008/12/20 02:51:54 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -42,6 +42,7 @@ pkgxmldata_DATA =				\
 	f360_photo7_japan.xml			\
 	f360_ultrachrome.xml			\
 	f360_ultrachrome_k3.xml			\
+	nx100.xml				\
 	photo_gen0.xml				\
 	photo_gen1.xml				\
 	photo_gen2.xml				\
