--- a/src/xml/escp2/model/Makefile.am
+++ b/src/xml/escp2/model/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.14 2008/12/10 00:44:12 rlk Exp $
+## $Id: Makefile.am,v 1.15 2009/03/22 01:51:59 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -123,7 +123,8 @@ pkgxmldata_DATA =				\
 	model_94.xml				\
 	model_95.xml				\
 	model_96.xml				\
-	model_97.xml
+	model_97.xml				\
+	model_98.xml
 
 xml-stamp: $(pkgxmldata_DATA) Makefile.am
 	-rm -f $@ $@.tmp
