dist-hook needs xml-stamp to be created

--- a/src/xml/escp2/qualitypresets/Makefile.am
+++ b/src/xml/escp2/qualitypresets/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.3 2008/10/24 00:37:14 rleigh Exp $
+## $Id: Makefile.am,v 1.4 2009/05/30 14:10:32 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -40,6 +40,7 @@ xml-stamp: $(pkgxmldata_DATA) Makefile.am
 
 all-local: xml-stamp
 
+dist-hook: xml-stamp
 CLEANFILES = xmli18n-tmp.h xml-stamp xml-stamp.tmp
 
 EXTRA_DIST = $(pkgxmldata_DATA)
