--- a/src/xml/escp2/Makefile.am
+++ b/src/xml/escp2/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.8 2008/10/24 00:37:14 rleigh Exp $
+## $Id: Makefile.am,v 1.9 2009/05/30 14:10:32 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -50,6 +50,8 @@ xml-stamp: media/xml-stamp			\
 	mv $@.tmp $@
 
 all-local: xml-stamp
+
+dist-hook: xml-stamp
 ## Clean
 
 CLEANFILES = xml-stamp
