--- a/src/xml/escp2/model/Makefile.am
+++ b/src/xml/escp2/model/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.18 2010/01/16 19:53:46 rlk Exp $
+## $Id: Makefile.am,v 1.19 2010/06/14 13:03:26 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -126,6 +126,7 @@ pkgxmldata_DATA =				\
 	model_97.xml				\
 	model_98.xml				\
 	model_99.xml				\
+	model_101.xml				\
 	model_100.xml
 
 xml-stamp: $(pkgxmldata_DATA) Makefile.am
